force-app/main/default/objects/Initial_Rehab__c/Initial_Rehab__c.object-meta.xml
<CustomObject>
    <label>Initial Rehab</label>
    <nameField>
        <displayFormat>IR - {00000}</displayFormat>
        <label>Initial Rehab Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Initial Rehabs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>