force-app/main/default/objects/Initial_Rehab__c/fields/Acq_Source__c.field-meta.xml
<CustomField>
    <fullName>Acq_Source__c</fullName>
    <formula>Inspection_ID__r.Acq_Source__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acq Source</label>
    <type>Text</type>
</CustomField>