force-app/main/default/objects/Initial_Rehab__c/fields/Actual_Rehab_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Rehab_Complete_Date__c</fullName>
    <label>Actual Rehab Complete Date</label>
    <type>Date</type>
</CustomField>