force-app/main/default/objects/Initial_Rehab__c/fields/Approved_Change_Order_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Change_Order_3_Date__c</fullName>
    <label>Approved Change Order #3 Date</label>
    <type>Date</type>
</CustomField>