force-app/main/default/objects/Initial_Rehab__c/fields/Baths__c.field-meta.xml
<CustomField>
    <fullName>Baths__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Baths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baths</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>