force-app/main/default/objects/Initial_Rehab__c/fields/Bid_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Bid_Recommendation__c</fullName>
    <formula>Inspection_ID__r.Bid_Recommendation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Recommendation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>