force-app/main/default/objects/Initial_Rehab__c/fields/Busy_Street__c.field-meta.xml
<CustomField>
    <fullName>Busy_Street__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Has_Busy_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Busy Street</label>
    <type>Checkbox</type>
</CustomField>