force-app/main/default/objects/Initial_Rehab__c/fields/Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Closing_Date__c</fullName>
    <formula>Inspection_ID__r.Closing_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closing Date</label>
    <type>Date</type>
</CustomField>