force-app/main/default/objects/Initial_Rehab__c/fields/CO1_Submission_Complete__c.field-meta.xml
<CustomField>
    <fullName>CO1_Submission_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO1 Submission Complete</label>
    <type>Checkbox</type>
</CustomField>