force-app/main/default/objects/Initial_Rehab__c/fields/Date_Invoice_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Approved__c</fullName>
    <label>Date Invoice Approved</label>
    <type>Date</type>
</CustomField>