force-app/main/default/objects/Initial_Rehab__c/fields/Estimated_Move_Out_at_Closing__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Move_Out_at_Closing__c</fullName>
    <formula>Inspection_ID__r.Estimated_Move_Out_at_Closing__c</formula>
    <label>Estimated Move Out at Closing</label>
    <type>Date</type>
</CustomField>