force-app/main/default/objects/Initial_Rehab__c/fields/Final_Change_Order_Form_Created__c.field-meta.xml
<CustomField>
    <fullName>Final_Change_Order_Form_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Change Order Form Created</label>
    <type>Checkbox</type>
</CustomField>