force-app/main/default/objects/Initial_Rehab__c/fields/Flood_Zone__c.field-meta.xml
<CustomField>
    <fullName>Flood_Zone__c</fullName>
    <formula>Text(Inspection_ID__r.Prospect_ID__r.Flood_Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flood Zone</label>
    <type>Text</type>
</CustomField>