force-app/main/default/objects/Initial_Rehab__c/fields/Gas_on__c.field-meta.xml
<CustomField>
    <fullName>Gas_on__c</fullName>
    <label>Gas On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>