force-app/main/default/objects/Initial_Rehab__c/fields/Gas_Present__c.field-meta.xml
<CustomField>
    <fullName>Gas_Present__c</fullName>
    <label>Gas Present</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Fuel Oil Tank</fullName>
            </value>
            <value>
                <fullName>Propane Tank</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <isActive>false</isActive>
                <label>No</label>
            </value>
            <value>
                <fullName>Oil</fullName>
                <isActive>false</isActive>
                <label>Oil</label>
            </value>
            <value>
                <fullName>Propane</fullName>
                <isActive>false</isActive>
                <label>Propane</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>