force-app/main/default/objects/Initial_Rehab__c/fields/General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>General_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Contractor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>General Contractor</value>
        </filterItems>
        <filterItems>
            <field>Account.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Initial Rehabs (General Contractor)</relationshipLabel>
    <relationshipName>Initial_Rehabs1</relationshipName>
    <type>Lookup</type>
</CustomField>