force-app/main/default/objects/Initial_Rehab__c/fields/Has_Septic__c.field-meta.xml
<CustomField>
    <fullName>Has_Septic__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Has_Septic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Septic</label>
    <type>Checkbox</type>
</CustomField>