force-app/main/default/objects/Initial_Rehab__c/fields/Heavy_Industry__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Industry__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Has_Heavy_Industry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heavy Industry</label>
    <type>Checkbox</type>
</CustomField>