force-app/main/default/objects/Initial_Rehab__c/fields/HOA_Name_UW__c.field-meta.xml
<CustomField>
    <fullName>HOA_Name_UW__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.HOA_Name_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA Name @ UW</label>
    <type>Text</type>
</CustomField>