force-app/main/default/objects/Initial_Rehab__c/fields/HOA_Y_N__c.field-meta.xml
<CustomField>
    <fullName>HOA_Y_N__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.HOA_YN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA (Y/N)</label>
    <type>Checkbox</type>
</CustomField>