force-app/main/default/objects/Initial_Rehab__c/fields/Initial_Rehab_Scope_Notes__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rehab_Scope_Notes__c</fullName>
    <label>Initial Rehab Scope Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>