force-app/main/default/objects/Initial_Rehab__c/fields/Initial_Rehab_Stage__c.field-meta.xml
<CustomField>
    <fullName>Initial_Rehab_Stage__c</fullName>
    <label>Initial Rehab Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job in Progress</fullName>
                <default>true</default>
                <label>Job in Progress</label>
            </value>
            <value>
                <fullName>Job Complete</fullName>
            </value>
            <value>
                <fullName>Change Order Form 1 Created</fullName>
                <isActive>false</isActive>
                <label>Change Order Form 1 Created</label>
            </value>
            <value>
                <fullName>Change Order Form 2 Created</fullName>
                <isActive>false</isActive>
                <label>Change Order Form 2 Created</label>
            </value>
            <value>
                <fullName>Change Order Form 3 Created</fullName>
                <isActive>false</isActive>
                <label>Change Order Form 3 Created</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>