force-app/main/default/objects/Initial_Rehab__c/fields/Inspection_ID__c.field-meta.xml
<CustomField>
    <fullName>Inspection_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection ID</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>Initial Rehab</relationshipLabel>
    <relationshipName>Initial_Rehabs</relationshipName>
    <type>Lookup</type>
</CustomField>