force-app/main/default/objects/Initial_Rehab__c/fields/Inspection_Stage__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Stage__c</fullName>
    <formula>TEXT(Inspection_ID__r.Inspection_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspection Stage</label>
    <type>Text</type>
</CustomField>