force-app/main/default/objects/Initial_Rehab__c/fields/Leaseback__c.field-meta.xml
<CustomField>
    <fullName>Leaseback__c</fullName>
    <formula>Inspection_ID__r.Leaseback__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leaseback</label>
    <type>Checkbox</type>
</CustomField>