force-app/main/default/objects/Initial_Rehab__c/fields/Leaseback_Security_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Leaseback_Security_Deposit_Amount__c</fullName>
    <formula>Inspection_ID__r.Leaseback_Security_Deposit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leaseback Security Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>