force-app/main/default/objects/Initial_Rehab__c/fields/Lessee_Name__c.field-meta.xml
<CustomField>
    <fullName>Lessee_Name__c</fullName>
    <formula>Inspection_ID__r.Lessee_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lessee Name</label>
    <type>Text</type>
</CustomField>