force-app/main/default/objects/Initial_Rehab__c/fields/Lockbox_Code__c.field-meta.xml
<CustomField>
    <fullName>Lockbox_Code__c</fullName>
    <formula>Right(Inspection_ID__r.Name,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lockbox Code</label>
    <type>Text</type>
</CustomField>