force-app/main/default/objects/Initial_Rehab__c/fields/Lot_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Lot_Sq_Ft__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Lot_SqFt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lot Sq/Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>