force-app/main/default/objects/Initial_Rehab__c/fields/Month_to_Month__c.field-meta.xml
<CustomField>
    <fullName>Month_to_Month__c</fullName>
    <formula>Inspection_ID__r.Month_to_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month to Month</label>
    <type>Checkbox</type>
</CustomField>