force-app/main/default/objects/Initial_Rehab__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <formula>Text(Inspection_ID__r.Prospect_ID__r.Parking__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking</label>
    <type>Text</type>
</CustomField>