force-app/main/default/objects/Initial_Rehab__c/fields/Pool__c.field-meta.xml
<CustomField>
    <fullName>Pool__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Pool__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pool</label>
    <type>Checkbox</type>
</CustomField>