force-app/main/default/objects/Initial_Rehab__c/fields/Property_Acquisition_Date__c.field-meta.xml
<CustomField>
    <fullName>Property_Acquisition_Date__c</fullName>
    <formula>Property_ID__r.Acquisition_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Acquisition Date</label>
    <type>Date</type>
</CustomField>