force-app/main/default/objects/Initial_Rehab__c/fields/Property_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Address__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Property_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Address</label>
    <type>Text</type>
</CustomField>