force-app/main/default/objects/Initial_Rehab__c/fields/Property_City__c.field-meta.xml
<CustomField>
    <fullName>Property_City__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Property_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property City</label>
    <type>Text</type>
</CustomField>