force-app/main/default/objects/Initial_Rehab__c/fields/Property_State__c.field-meta.xml
<CustomField>
    <fullName>Property_State__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Property_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property State</label>
    <type>Text</type>
</CustomField>