force-app/main/default/objects/Initial_Rehab__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <formula>Text(Inspection_ID__r.Prospect_ID__r.Property_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>