force-app/main/default/objects/Initial_Rehab__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Property_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Zip Code</label>
    <type>Text</type>
</CustomField>