force-app/main/default/objects/Initial_Rehab__c/fields/Punch_Order_Form_Created__c.field-meta.xml
<CustomField>
    <fullName>Punch_Order_Form_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Punch Order Form Created</label>
    <type>Checkbox</type>
</CustomField>