force-app/main/default/objects/Initial_Rehab__c/fields/Repair_Director__c.field-meta.xml
<CustomField>
    <fullName>Repair_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Initial_Rehabs1</relationshipName>
    <type>Lookup</type>
</CustomField>