force-app/main/default/objects/Initial_Rehab__c/fields/Revised_Commitment_CO1__c.field-meta.xml
<CustomField>
    <fullName>Revised_Commitment_CO1__c</fullName>
    <label>Revised Commitment CO1</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>