force-app/main/default/objects/Initial_Rehab__c/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <formula>TEXT(Inspection_ID__r.Prospect_ID__r.Sale_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Type</label>
    <type>Text</type>
</CustomField>