force-app/main/default/objects/Initial_Rehab__c/fields/Security_Deposit_Released__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Released__c</fullName>
    <formula>Inspection_ID__r.Security_Deposit_Released__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Security Deposit Released</label>
    <type>Text</type>
</CustomField>