force-app/main/default/objects/Initial_Rehab__c/fields/Septic__c.field-meta.xml
<CustomField>
    <fullName>Septic__c</fullName>
    <label>Septic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>