force-app/main/default/objects/Initial_Rehab__c/fields/Stories_of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Stories_of_Floors__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Stories__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stories/# of Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>