force-app/main/default/objects/Initial_Rehab__c/fields/Tenant_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Tenant_in_Place__c</fullName>
    <formula>Inspection_ID__r.Tenant_in_Place__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant in Place</label>
    <type>Checkbox</type>
</CustomField>