force-app/main/default/objects/Initial_Rehab__c/fields/Tenant_Move_out_Date__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Move_out_Date__c</fullName>
    <formula>Inspection_ID__r.Tenant_Move_out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tenant Move-out Date</label>
    <type>Date</type>
</CustomField>