force-app/main/default/objects/Initial_Rehab__c/fields/TIP_Actual_Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>TIP_Actual_Move_Out_Date__c</fullName>
    <formula>Inspection_ID__r.TIP_Actual_Move_Out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TIP Actual Move Out Date</label>
    <type>Date</type>
</CustomField>