force-app/main/default/objects/Initial_Rehab__c/fields/Unit_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Number__c</fullName>
    <formula>Inspection_ID__r.Prospect_ID__r.Unit_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Number</label>
    <type>Text</type>
</CustomField>