force-app/main/default/objects/Initial_Rehab__c/fields/Water_Meter__c.field-meta.xml
<CustomField>
    <fullName>Water_Meter__c</fullName>
    <label>Water Meter #</label>
    <length>200</length>
    <type>Text</type>
</CustomField>