force-app/main/default/objects/Initial_Rehab__c/fields/Work_Authorization_Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Date_Issued__c</fullName>
    <formula>Inspection_ID__r.Work_Authorization_Date_Issued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Authorization Date Issued</label>
    <type>Date</type>
</CustomField>